--- a/header.html
+++ b/header.html
@@ -1,5 +1,6 @@
  <header>
 	<section class="greenPatch"><a href="index.html"><img class="headIcon" src="tampa-bay.png"></a></section>
 	<link rel="stylesheet" href="styles.css" type="text/css">   
+	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro|Droid+Sans|Cabin|Montserrat' rel='stylesheet' type='text/css'>
 <script src="https://code.jquery.com/jquery-1.11.3.js"></script>
     </header>
