--- a/index.1.html
+++ b/index.1.html
@@ -1,14 +1,19 @@
-<!doctype html>
+
 
 <html>
     <head>
         <script src="https://code.jquery.com/jquery-1.11.3.js"></script>
         	<link rel="stylesheet" href="styles.css" type="text/css">   
-
     </head>
-    <header>
-	<section class="greenPatch"><a href="index.html"><img class="headIcon" src="tampa-bay.png"></a></section>
-    </header>
+<header>
+<a class="logLink" href="logout.php"><span class="logout"><img height="50px" width="auto" src="rightarrow10.png"><br>Logout</span></a>
+<section class="greenPatch"><a href="careerindex.php"><img class="headIcon" src="tampa-bay.png"></a></section>
+<ul class="navBar">
+<a class="navLink" href="download.php"<li class="navOption">first day orientation</li></a><!--
+--><a class="navLink" href="documentation.php"<li class="navOption">documentation </li></a><!--
+--><a class="navLink" href="http://mylabs.px.pearsoned.com/Pegasus/frmLogin.aspx?s=3"<li class="navOption">pearson custom </li></a>
+</ul>
+</header>
     <body>
       <!--  <div class="welcome">Welcome to the TimeSheet App!</div>-->
         <div class="timeSheetBox"> <img class="mainIcon" src="time2.png">
