--- a/pullOutmenu.html
+++ b/pullOutmenu.html
@@ -1,10 +1,10 @@
 <div id="quickNavHolder2">
 <section class="sideSection" id="sideSection">
     <div id="navMenuSide"><h3>Quick Nav</h3></div>
-    <a href="#" id="add"class="noDecoration"><div id="navLinkSide"><img class="testImage"src="add.png" >Add Student</div></a>
-    <a href="#" id="view" class="noDecoration"><div id="navLinkSide"><img class="testImage"src="hourglass.png" >View Sheets</div></a>
-    <a href="#" id="edit" class="noDecoration"><div id="navLinkSide"><img class="testImage"src="edit.png" >Edit Times</div></a>
-</section><img class="toggleTool" id="toggleTool" onclick="togglingMenu()" src="right133.png">
+    <a href="#" id="add"class="noDecoration"><div id="navLinkSide"><img class="testImage"src="images/add.png" >Add Student</div></a>
+    <a href="#" id="view" class="noDecoration"><div id="navLinkSide"><img class="testImage"src="images/hourglass.png" >View Sheets</div></a>
+    <a href="#" id="edit" class="noDecoration"><div id="navLinkSide"><img class="testImage"src="images/edit.png" >Edit Times</div></a>
+</section><img class="toggleTool" id="toggleTool" onclick="togglingMenu()" src="images/right133.png">
 </div>
 <div class="blackOut"></div>
 <script>
