fixed needed edits, removed grad extras and implimented new function on redirect

--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,3 @@
 <footer>
-Vallie Joseph &copy; 2015-<?php echo date("Y")?> ifdhfijsdig
+<a href="mailto:valliejoseph@gmail.com?Subject=Techsupport%20Request" target="_top">Vallie Joseph</a> @ Tally LLC  &copy;-<?php echo date("Y")?>
 </footer>
